--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -1,6 +1,6 @@
 .btn {
     display: inline-block;
-    background: #000;
+    background: #004743;
     color: #fff;
     border: none;
     padding: 10px 20px;
@@ -11,6 +11,11 @@
     font-size: 15px;
     font-family: inherit;
   }
+
+  .btn:hover {
+    background: #d1ad01;
+    color: #fff;
+  }
   
   .btn:focus {
     outline: none;
@@ -20,7 +25,4 @@
     transform: scale(0.98);
   }
   
-  .btn-block {
-    display: block;
-    width: 100%;
-  }
+ 
