--- a/src/components/Item/styles.css
+++ b/src/components/Item/styles.css
@@ -1,13 +1,20 @@
-.task {
+.item-url {
     background: #f4f4f4;
     margin: 5px;
     padding: 10px 20px;
-    cursor: pointer;
+    
   }
   
   
-  .task h3 {
+  .item-url h3 {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    
+  }
+
+
+  .status {
+    width: 30px;
+    height: 30px;
   }
